<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">忆·</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_words">让回忆绽放</string>
    <string name="sign_with_qq">使用qq登录</string>
    <string name="sign_with_weibo">使用微博登录</string>
    <string name="followers">粉丝</string>
    <string name="following">关注</string>
    <string name="popular">受欢迎的</string>
    <string name="settings">关于</string>
    <string name="log_out">登出</string>
    <string name="new_post_text_hint">"记录下来触景生情的这一瞬间吧!"</string>
    <string name="could_not_find_gallery">找不到相册</string>
    <string name="could_not_find_camera">找不到相机</string>
    <string name="could_not_save_file">存储卡不可用</string>
    <string name="could_not_open_image">无法打开图片</string>
    <string name="upload_post">上传中</string>
    <string name="sorry">抱歉</string>
    <string name="ok">确定</string>
    <string name="no_internetwork_connection">无网络连接</string>
    <string name="upload_fialure_message">上传失败，请重试</string>
    <string name="num_followers">粉丝  %d</string>
    <string name="num_followings">关注  %d</string>
    <string name="_fetch_followers_tip">获取粉丝</string>
    <string name="_fetch_following_tip">获取关注</string>
    <string name="fetch_popular_tip">获取受欢迎的</string>
    <string name="_no_followers_tip">暂无粉丝</string>
    <string name="_no_followings_tip">暂无关注</string>
    <string name="comment">评论</string>
    <string name="_no_commits_tip">暂无评论</string>
    <string name="comments">评论</string>
    <string name="_post_comment_failure">评论失败</string>
    <string name="_delete_post">删除</string>
    <string name="_delete_tip_">删除中</string>
    <string name="_delete_post_failure_tip">删除失败</string>
    <string name="_app_by">BY 欢喜的病人</string>
    <string name="_login_fail_tip">登录失败，请重试!</string>
</resources>
