<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="#eeffffff"
    android:clickable="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="140.0dip">
        <ImageView android:id="@+id/avatar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop" />
        <View
            android:layout_gravity="bottom"
            android:background="@drawable/gradient_overlay"
            android:layout_width="fill_parent"
            android:layout_height="100.0dip" />
        <TextView
            android:textSize="18.0sp"
            android:textColor="@android:color/white"
            android:layout_gravity="bottom|left|center"
            android:id="@+id/user_name"
            android:padding="8.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="0.0"
            android:shadowDy="2.0"
            android:shadowRadius="2.0"
            />
    </FrameLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/followers"
        android:background="@drawable/selectable_item_background"
        android:padding="16.0dip"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18.0sp"
            android:textColor="#ff333333"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:layout_weight="1.0"
            android:fontFamily="fonts/Roboto-Light.ttf"
            />
        <TextView
            android:textSize="18.0sp"
            android:textColor="#ff333333"
            android:id="@+id/followers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/following"
        android:background="@drawable/selectable_item_background"
        android:padding="16.0dip"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18.0sp"
            android:textColor="#ff333333"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:layout_weight="1.0"
            />
        <TextView
            android:textSize="18.0sp"
            android:textColor="#ff333333"
            android:id="@+id/following_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <TextView
        android:textSize="18.0sp"
        android:textColor="#ff333333"
        android:id="@+id/popular"
        android:background="@drawable/selectable_item_background"
        android:padding="16.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular"
        />
    <Space
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" />
    <LinearLayout
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18.0sp"
            android:textColor="#ff333333"
            android:id="@+id/settings"
            android:background="@drawable/selectable_item_background"
            android:padding="16.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            />
        <TextView
            android:textSize="18.0sp"
            android:textColor="#ff333333"
            android:id="@+id/log_out"
            android:background="@drawable/selectable_item_background"
            android:padding="16.0dip"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            />
    </LinearLayout>
</LinearLayout>